--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
- Theme Name:   Flisol - Salomon
+ Theme Name:   Flisol - Salomon OK
   Description:  Restaurante con BLog
  Author:       Saul Salomon Ramirez Zuñiga
  Template:     wp-restaurante
